<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearMenuTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#09AAFF"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <carbon.widget.ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_back"
                app:carbon_rippleColor="@color/transparent_click" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextTitleNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/setting"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <carbon.widget.ImageView
                android:id="@+id/btnMenuRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_medal_star"
                app:carbon_rippleColor="@color/transparent_click" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearVip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearMenuTop">

        <carbon.widget.ConstraintLayout
            android:id="@+id/btnVip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C2E4FF"
            android:orientation="vertical"
            app:carbon_cornerRadius="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginLeft="15dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    style="@style/TextBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_effectively"
                    android:textColor="#0996E1" />

                <TextView
                    style="@style/TextTitleNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vip_version"
                    android:textColor="#0996E1"
                    android:textSize="25sp" />

            </LinearLayout>

            <carbon.widget.TextView
                style="@style/TextTitleNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="#20B2FF"
                android:padding="12dp"
                android:text="@string/see_more"
                app:carbon_cornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </carbon.widget.ConstraintLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearCheckNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearVip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_new_note"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_txt"/>

            <carbon.widget.TextView
                style="@style/TextTitleNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#20B2FF"
                android:padding="12dp"
                android:text="@string/apply"
                android:textSize="10sp"
                app:carbon_cornerRadius="8dp"/>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearCheckList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearCheckNote">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_new_note"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_checklist"/>

            <carbon.widget.TextView
                style="@style/TextTitleNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#20B2FF"
                android:padding="12dp"
                android:text="@string/apply"
                android:textSize="10sp"
                app:carbon_cornerRadius="8dp"/>


        </LinearLayout>


    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearCheckList" />


    <com.newsoft.nscustom.view.recyclerview.NSRecyclerview
        android:id="@+id/rvSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


</androidx.constraintlayout.widget.ConstraintLayout>