<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    app:dragEdge="right"
    app:mode="same_level">

    
    <LinearLayout
        android:id="@+id/linearSwipeLayout"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <carbon.widget.TextView
            android:id="@+id/btnPin"
            style="@style/TextNunitoBlack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/white"
            android:gravity="center"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/pin"
            app:carbon_cornerRadius="10dp" />

        <carbon.widget.TextView
            android:id="@+id/btnShare"
            style="@style/TextNunitoBlack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/white"
            android:gravity="center"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/share"
            app:carbon_cornerRadius="10dp" />


        <carbon.widget.TextView
            android:id="@+id/btnDelete"
            style="@style/TextNunitoBlack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:carbon_cornerRadius="10dp" />

    </LinearLayout>

    <carbon.widget.LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow1"
        android:orientation="vertical"
        app:carbon_cornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imgIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_note_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextNunitoBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="tạo ghi chú"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <carbon.widget.LinearLayout
                android:id="@+id/btnNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:visibility="visible"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                app:carbon_cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgIconBtnNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_new_note" />

                <TextView
                    android:id="@+id/tvNew"
                    style="@style/TextTitleNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="@string/add_new"
                    android:textSize="12sp" />

            </carbon.widget.LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgPin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    android:src="@drawable/pin" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="09/06/2023"
                    android:textColor="@color/black" />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </carbon.widget.LinearLayout>

</com.daimajia.swipe.SwipeLayout>



